manifests/livekit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lk-token
  name: lk-token
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lk-token
  template:
    metadata:
      labels:
        app: lk-token
    spec:
      containers:
      - name: livekit-token-generator
        image: megzo/livekit-token-generator:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: lk-token
  labels:
    app: lk-token
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: lk-token
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lk-meet
  name: lk-meet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lk-meet
  template:
    metadata:
      labels:
        app: lk-meet
    spec:
      containers:
      - name: lk-meet
        image: megzo/livekit-meet:0.2
        imagePullPolicy: Always
        #command: ["yarn"]
        #args: ["dev"]
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: config-volume
          mountPath: /app/.env.local
          subPath: .env.local
      volumes:
      - name: config-volume
        configMap:
          name: livekit-meet
---
apiVersion: v1
kind: Service
metadata:
  name: lk-meet
  labels:
    app: lk-meet
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: lk-meet
---
apiVersion: v1
kind: Service
metadata:
  name: livekit-server
  labels:
    app.kubernetes.io/name: livekit-server
    app.kubernetes.io/instance: livekit
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 7880
      protocol: TCP
      name: http
    - port: 7801
      targetPort: 7801
      protocol: TCP
      name: rtc-tcp
  selector:
    app.kubernetes.io/name: livekit-server
    app.kubernetes.io/instance: livekit
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: livekit-server
  labels:
    app.kubernetes.io/name: livekit-server
    app.kubernetes.io/instance: livekit
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: livekit-server
      app.kubernetes.io/instance: livekit
  template:
    metadata:
      labels:
        app.kubernetes.io/name: livekit-server
        app.kubernetes.io/instance: livekit
    spec:
      terminationGracePeriodSeconds: 18000 # 5 hours
      containers:
        - name: livekit-server
          image: "livekit/livekit-server:v1.8.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7880
              protocol: TCP
            - name: rtc-tcp
              containerPort: 7801
              protocol: TCP
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: livekit-mediaserver
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - ms.aws.stunner.cc
      - meet.aws.stunner.cc
    secretName: livekit-secret-tls
  rules:
  - host: ms.aws.stunner.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: livekit-server
            port:
              number: 443
      - path: /api/token
        pathType: Prefix
        backend:
          service:
            name: lk-token
            port:
              number: 80
  - host: meet.aws.stunner.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lk-meet
            port:
              number: 80
---
# Redis
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  labels:
    app: redis
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
        - name: data
          emptyDir: {}
        - name: config
          configMap:
            name: redis-config
            items:
            - key: redis-config
              path: redis.conf
      containers:
        - name: redis
          image: redis
          command:
            - redis-server
            - "/redis-master/redis.conf"
          ports:
          - containerPort: 6379
          volumeMounts:
            - mountPath: /redis-master-data
              name: data
            - mountPath: /redis-master
              name: config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis
spec:
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: redis
  clusterIP: None
